feat: Add health check, grafana dashboard and rework bufferbloat feature
